src/test/deca/context/valid/operation-binaire-plus.deca
// Description:
//    operation binaire plus
//
// Resultats:
//    
//
// Historique:
//    cree le 06/01/2023

{
    1+2;
}