src/test/deca/context/invalid/operation-binaire-plus-wrong.deca
// Description:
//    Test 3.33 fail avec plus 
//
// Resultats:
//    Ligne 11: Plus ne s'utilise qu'avec des int ou des float.
//
// Historique:
//    cree le 06/01/2023

{
    1 + "hello world";
}